lex_parser/y.output
Nonterminals useless in grammar

    program
    stmts
    stmt_types
    if_stmt
    for_stmt
    while_stmt
    decl_stmt
    assign_stmt
    return_stmt
    predicate
    exp_rhs
    fn_call
    fn_args


Rules useless in grammar

   66 program: stmts

   67 stmts: stmt_types stmts
   68      | ε
   69      | OPEN_CIR_PAR stmts CLOSE_CIR_PAR

   70 stmt_types: assign_stmt SEMICOL
   71           | decl_stmt SEMICOL
   72           | if_stmt SEMICOL
   73           | for_stmt
   74           | while_stmt
   75           | return_stmt SEMICOL

   76 if_stmt: CHOICE

   77 for_stmt: ITER

   78 while_stmt: UNTIL

   79 decl_stmt: GET_AREA

   80 assign_stmt: ID ASSIGN exp_rhs

   81 return_stmt: RETURN exp_rhs

   82 predicate: exp_rhs GT exp_rhs
   83          | exp_rhs LT exp_rhs
   84          | exp_rhs EQ exp_rhs
   85          | exp_rhs NE exp_rhs
   86          | exp_rhs GE exp_rhs
   87          | exp_rhs LE exp_rhs
   88          | exp_rhs AND exp_rhs
   89          | exp_rhs OR exp_rhs
   90          | NEG exp_rhs

   91 exp_rhs: OPEN_CIR_PAR exp_rhs CLOSE_CIR_PAR
   92        | exp_rhs ARITH_OP exp_rhs
   93        | predicate
   94        | ID
   95        | INT_NUM
   96        | DOUBLE_NUM
   97        | fn_call
   98        | ID INC
   99        | ID DEC
  100        | INT_NUM INC
  101        | INT_NUM DEC
  102        | DOUBLE_NUM INC
  103        | DOUBLE_NUM DEC
  104        | ID OPEN_SQUARE_PAR exp_rhs CLOSE_SQUARE_PAR
  105        | OPEN_CIR_PAR exp_rhs COMMA exp_rhs CLOSE_CIR_PAR

  106 fn_call: ID OPEN_CIR_PAR fn_args CLOSE_CIR_PAR

  107 fn_args: exp_rhs COMMA fn_args
  108        | exp_rhs
  109        | ε


Grammar

    0 $accept: S $end

    1 S: temp S
    2  | ε

    3 temp: ITER
    4     | UNTIL
    5     | RETURN
    6     | REM
    7     | NEQ
    8     | OR
    9     | NEG
   10     | AND
   11     | INT
   12     | CINT
   13     | DOUBLE
   14     | CDOUBLE
   15     | STR
   16     | BIN
   17     | REAL
   18     | IMG
   19     | POW
   20     | POLAR
   21     | CONJUGATE
   22     | MOD
   23     | ARG
   24     | ANGLE
   25     | DIST
   26     | CPRINT
   27     | ROTATE
   28     | CHOICE
   29     | ALT
   30     | DEFAULT
   31     | GET_LINE
   32     | IS_TRIANGLE
   33     | GET_CENTROID
   34     | GET_CIRCUMCENTER
   35     | GET_ORTHOCENTER
   36     | GET_INCENTER
   37     | GET_EXCENTER
   38     | GET_AREA
   39     | GET_PERIMETER
   40     | ID
   41     | SEMICOL
   42     | COMMA
   43     | COLON
   44     | QUOTE
   45     | GT
   46     | LT
   47     | EQ
   48     | NE
   49     | INC
   50     | DEC
   51     | ASSIGN
   52     | LE
   53     | GE
   54     | INT_NUM
   55     | DOUBLE_NUM
   56     | ARITH_OP
   57     | ACCESS_OP1
   58     | ACCESS_OP2
   59     | INN_PROD
   60     | OPEN_CIR_PAR
   61     | CLOSE_CIR_PAR
   62     | OPEN_CURLY_PAR
   63     | CLOSE_CURLY_PAR
   64     | OPEN_SQUARE_PAR
   65     | CLOSE_SQUARE_PAR


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    ITER (258) 3
    UNTIL (259) 4
    RETURN (260) 5
    REM (261) 6
    NEQ (262) 7
    OR (263) 8
    NEG (264) 9
    AND (265) 10
    INT (266) 11
    CINT (267) 12
    DOUBLE (268) 13
    CDOUBLE (269) 14
    STR (270) 15
    BIN (271) 16
    REAL (272) 17
    IMG (273) 18
    POW (274) 19
    POLAR (275) 20
    CONJUGATE (276) 21
    MOD (277) 22
    ARG (278) 23
    ANGLE (279) 24
    DIST (280) 25
    CPRINT (281) 26
    ROTATE (282) 27
    CHOICE (283) 28
    ALT (284) 29
    DEFAULT (285) 30
    GET_LINE (286) 31
    IS_TRIANGLE (287) 32
    GET_CENTROID (288) 33
    GET_CIRCUMCENTER (289) 34
    GET_ORTHOCENTER (290) 35
    GET_INCENTER (291) 36
    GET_EXCENTER (292) 37
    GET_AREA (293) 38
    GET_PERIMETER (294) 39
    ID (295) 40
    SEMICOL (296) 41
    COMMA (297) 42
    COLON (298) 43
    QUOTE (299) 44
    GT (300) 45
    LT (301) 46
    EQ (302) 47
    NE (303) 48
    INC (304) 49
    DEC (305) 50
    ASSIGN (306) 51
    LE (307) 52
    GE (308) 53
    INT_NUM (309) 54
    DOUBLE_NUM (310) 55
    ARITH_OP (311) 56
    ACCESS_OP1 (312) 57
    ACCESS_OP2 (313) 58
    INN_PROD (314) 59
    OPEN_CIR_PAR (315) 60
    CLOSE_CIR_PAR (316) 61
    OPEN_CURLY_PAR (317) 62
    CLOSE_CURLY_PAR (318) 63
    OPEN_SQUARE_PAR (319) 64
    CLOSE_SQUARE_PAR (320) 65


Nonterminals, with rules where they appear

    $accept (66)
        on left: 0
    S (67)
        on left: 1 2
        on right: 0 1
    temp (68)
        on left: 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65
        on right: 1


State 0

    0 $accept: • S $end

    ITER              shift, and go to state 1
    UNTIL             shift, and go to state 2
    RETURN            shift, and go to state 3
    REM               shift, and go to state 4
    NEQ               shift, and go to state 5
    OR                shift, and go to state 6
    NEG               shift, and go to state 7
    AND               shift, and go to state 8
    INT               shift, and go to state 9
    CINT              shift, and go to state 10
    DOUBLE            shift, and go to state 11
    CDOUBLE           shift, and go to state 12
    STR               shift, and go to state 13
    BIN               shift, and go to state 14
    REAL              shift, and go to state 15
    IMG               shift, and go to state 16
    POW               shift, and go to state 17
    POLAR             shift, and go to state 18
    CONJUGATE         shift, and go to state 19
    MOD               shift, and go to state 20
    ARG               shift, and go to state 21
    ANGLE             shift, and go to state 22
    DIST              shift, and go to state 23
    CPRINT            shift, and go to state 24
    ROTATE            shift, and go to state 25
    CHOICE            shift, and go to state 26
    ALT               shift, and go to state 27
    DEFAULT           shift, and go to state 28
    GET_LINE          shift, and go to state 29
    IS_TRIANGLE       shift, and go to state 30
    GET_CENTROID      shift, and go to state 31
    GET_CIRCUMCENTER  shift, and go to state 32
    GET_ORTHOCENTER   shift, and go to state 33
    GET_INCENTER      shift, and go to state 34
    GET_EXCENTER      shift, and go to state 35
    GET_AREA          shift, and go to state 36
    GET_PERIMETER     shift, and go to state 37
    ID                shift, and go to state 38
    SEMICOL           shift, and go to state 39
    COMMA             shift, and go to state 40
    COLON             shift, and go to state 41
    QUOTE             shift, and go to state 42
    GT                shift, and go to state 43
    LT                shift, and go to state 44
    EQ                shift, and go to state 45
    NE                shift, and go to state 46
    INC               shift, and go to state 47
    DEC               shift, and go to state 48
    ASSIGN            shift, and go to state 49
    LE                shift, and go to state 50
    GE                shift, and go to state 51
    INT_NUM           shift, and go to state 52
    DOUBLE_NUM        shift, and go to state 53
    ARITH_OP          shift, and go to state 54
    ACCESS_OP1        shift, and go to state 55
    ACCESS_OP2        shift, and go to state 56
    INN_PROD          shift, and go to state 57
    OPEN_CIR_PAR      shift, and go to state 58
    CLOSE_CIR_PAR     shift, and go to state 59
    OPEN_CURLY_PAR    shift, and go to state 60
    CLOSE_CURLY_PAR   shift, and go to state 61
    OPEN_SQUARE_PAR   shift, and go to state 62
    CLOSE_SQUARE_PAR  shift, and go to state 63

    $default  reduce using rule 2 (S)

    S     go to state 64
    temp  go to state 65


State 1

    3 temp: ITER •

    $default  reduce using rule 3 (temp)


State 2

    4 temp: UNTIL •

    $default  reduce using rule 4 (temp)


State 3

    5 temp: RETURN •

    $default  reduce using rule 5 (temp)


State 4

    6 temp: REM •

    $default  reduce using rule 6 (temp)


State 5

    7 temp: NEQ •

    $default  reduce using rule 7 (temp)


State 6

    8 temp: OR •

    $default  reduce using rule 8 (temp)


State 7

    9 temp: NEG •

    $default  reduce using rule 9 (temp)


State 8

   10 temp: AND •

    $default  reduce using rule 10 (temp)


State 9

   11 temp: INT •

    $default  reduce using rule 11 (temp)


State 10

   12 temp: CINT •

    $default  reduce using rule 12 (temp)


State 11

   13 temp: DOUBLE •

    $default  reduce using rule 13 (temp)


State 12

   14 temp: CDOUBLE •

    $default  reduce using rule 14 (temp)


State 13

   15 temp: STR •

    $default  reduce using rule 15 (temp)


State 14

   16 temp: BIN •

    $default  reduce using rule 16 (temp)


State 15

   17 temp: REAL •

    $default  reduce using rule 17 (temp)


State 16

   18 temp: IMG •

    $default  reduce using rule 18 (temp)


State 17

   19 temp: POW •

    $default  reduce using rule 19 (temp)


State 18

   20 temp: POLAR •

    $default  reduce using rule 20 (temp)


State 19

   21 temp: CONJUGATE •

    $default  reduce using rule 21 (temp)


State 20

   22 temp: MOD •

    $default  reduce using rule 22 (temp)


State 21

   23 temp: ARG •

    $default  reduce using rule 23 (temp)


State 22

   24 temp: ANGLE •

    $default  reduce using rule 24 (temp)


State 23

   25 temp: DIST •

    $default  reduce using rule 25 (temp)


State 24

   26 temp: CPRINT •

    $default  reduce using rule 26 (temp)


State 25

   27 temp: ROTATE •

    $default  reduce using rule 27 (temp)


State 26

   28 temp: CHOICE •

    $default  reduce using rule 28 (temp)


State 27

   29 temp: ALT •

    $default  reduce using rule 29 (temp)


State 28

   30 temp: DEFAULT •

    $default  reduce using rule 30 (temp)


State 29

   31 temp: GET_LINE •

    $default  reduce using rule 31 (temp)


State 30

   32 temp: IS_TRIANGLE •

    $default  reduce using rule 32 (temp)


State 31

   33 temp: GET_CENTROID •

    $default  reduce using rule 33 (temp)


State 32

   34 temp: GET_CIRCUMCENTER •

    $default  reduce using rule 34 (temp)


State 33

   35 temp: GET_ORTHOCENTER •

    $default  reduce using rule 35 (temp)


State 34

   36 temp: GET_INCENTER •

    $default  reduce using rule 36 (temp)


State 35

   37 temp: GET_EXCENTER •

    $default  reduce using rule 37 (temp)


State 36

   38 temp: GET_AREA •

    $default  reduce using rule 38 (temp)


State 37

   39 temp: GET_PERIMETER •

    $default  reduce using rule 39 (temp)


State 38

   40 temp: ID •

    $default  reduce using rule 40 (temp)


State 39

   41 temp: SEMICOL •

    $default  reduce using rule 41 (temp)


State 40

   42 temp: COMMA •

    $default  reduce using rule 42 (temp)


State 41

   43 temp: COLON •

    $default  reduce using rule 43 (temp)


State 42

   44 temp: QUOTE •

    $default  reduce using rule 44 (temp)


State 43

   45 temp: GT •

    $default  reduce using rule 45 (temp)


State 44

   46 temp: LT •

    $default  reduce using rule 46 (temp)


State 45

   47 temp: EQ •

    $default  reduce using rule 47 (temp)


State 46

   48 temp: NE •

    $default  reduce using rule 48 (temp)


State 47

   49 temp: INC •

    $default  reduce using rule 49 (temp)


State 48

   50 temp: DEC •

    $default  reduce using rule 50 (temp)


State 49

   51 temp: ASSIGN •

    $default  reduce using rule 51 (temp)


State 50

   52 temp: LE •

    $default  reduce using rule 52 (temp)


State 51

   53 temp: GE •

    $default  reduce using rule 53 (temp)


State 52

   54 temp: INT_NUM •

    $default  reduce using rule 54 (temp)


State 53

   55 temp: DOUBLE_NUM •

    $default  reduce using rule 55 (temp)


State 54

   56 temp: ARITH_OP •

    $default  reduce using rule 56 (temp)


State 55

   57 temp: ACCESS_OP1 •

    $default  reduce using rule 57 (temp)


State 56

   58 temp: ACCESS_OP2 •

    $default  reduce using rule 58 (temp)


State 57

   59 temp: INN_PROD •

    $default  reduce using rule 59 (temp)


State 58

   60 temp: OPEN_CIR_PAR •

    $default  reduce using rule 60 (temp)


State 59

   61 temp: CLOSE_CIR_PAR •

    $default  reduce using rule 61 (temp)


State 60

   62 temp: OPEN_CURLY_PAR •

    $default  reduce using rule 62 (temp)


State 61

   63 temp: CLOSE_CURLY_PAR •

    $default  reduce using rule 63 (temp)


State 62

   64 temp: OPEN_SQUARE_PAR •

    $default  reduce using rule 64 (temp)


State 63

   65 temp: CLOSE_SQUARE_PAR •

    $default  reduce using rule 65 (temp)


State 64

    0 $accept: S • $end

    $end  shift, and go to state 66


State 65

    1 S: temp • S

    ITER              shift, and go to state 1
    UNTIL             shift, and go to state 2
    RETURN            shift, and go to state 3
    REM               shift, and go to state 4
    NEQ               shift, and go to state 5
    OR                shift, and go to state 6
    NEG               shift, and go to state 7
    AND               shift, and go to state 8
    INT               shift, and go to state 9
    CINT              shift, and go to state 10
    DOUBLE            shift, and go to state 11
    CDOUBLE           shift, and go to state 12
    STR               shift, and go to state 13
    BIN               shift, and go to state 14
    REAL              shift, and go to state 15
    IMG               shift, and go to state 16
    POW               shift, and go to state 17
    POLAR             shift, and go to state 18
    CONJUGATE         shift, and go to state 19
    MOD               shift, and go to state 20
    ARG               shift, and go to state 21
    ANGLE             shift, and go to state 22
    DIST              shift, and go to state 23
    CPRINT            shift, and go to state 24
    ROTATE            shift, and go to state 25
    CHOICE            shift, and go to state 26
    ALT               shift, and go to state 27
    DEFAULT           shift, and go to state 28
    GET_LINE          shift, and go to state 29
    IS_TRIANGLE       shift, and go to state 30
    GET_CENTROID      shift, and go to state 31
    GET_CIRCUMCENTER  shift, and go to state 32
    GET_ORTHOCENTER   shift, and go to state 33
    GET_INCENTER      shift, and go to state 34
    GET_EXCENTER      shift, and go to state 35
    GET_AREA          shift, and go to state 36
    GET_PERIMETER     shift, and go to state 37
    ID                shift, and go to state 38
    SEMICOL           shift, and go to state 39
    COMMA             shift, and go to state 40
    COLON             shift, and go to state 41
    QUOTE             shift, and go to state 42
    GT                shift, and go to state 43
    LT                shift, and go to state 44
    EQ                shift, and go to state 45
    NE                shift, and go to state 46
    INC               shift, and go to state 47
    DEC               shift, and go to state 48
    ASSIGN            shift, and go to state 49
    LE                shift, and go to state 50
    GE                shift, and go to state 51
    INT_NUM           shift, and go to state 52
    DOUBLE_NUM        shift, and go to state 53
    ARITH_OP          shift, and go to state 54
    ACCESS_OP1        shift, and go to state 55
    ACCESS_OP2        shift, and go to state 56
    INN_PROD          shift, and go to state 57
    OPEN_CIR_PAR      shift, and go to state 58
    CLOSE_CIR_PAR     shift, and go to state 59
    OPEN_CURLY_PAR    shift, and go to state 60
    CLOSE_CURLY_PAR   shift, and go to state 61
    OPEN_SQUARE_PAR   shift, and go to state 62
    CLOSE_SQUARE_PAR  shift, and go to state 63

    $default  reduce using rule 2 (S)

    S     go to state 67
    temp  go to state 65


State 66

    0 $accept: S $end •

    $default  accept


State 67

    1 S: temp S •

    $default  reduce using rule 1 (S)
